--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,22 @@
-.container {
-    display: flex;
-    gap: 0.5rem;
-    flex-direction: column;
-  }
-  
-  button {
-    width: 200px;
-  }
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box
+}
+.content {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ gap: 50px;
+ padding-top: 100px;
+ 
+
+}
+.img {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-gap: 20px;
+}
+
   
