--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,13 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px; }
+
+.input__inp {
+  width: 200px;
+  height: 50px;
+  background-color: darkcyan;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: 15px; }
