--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,5 +18,20 @@
   grid-template-columns: repeat(2,1fr);
   grid-gap: 20px;
 }
+.input{
+  &__inp {
+    width: 200px;
+    height: 50px;
+    background-color: darkcyan;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-family: sans-serif;
+    font-size: 15px;
+   
+
+    
+  }
+}
 
   
