--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 .img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px; }
+  grid-gap: 30px; }
 
 .input__inp {
   width: 200px;
@@ -24,4 +24,9 @@
   border: none;
   border-radius: 10px;
   font-family: sans-serif;
-  font-size: 15px; }
+  font-size: 15px;
+  box-shadow: 10px 10px 10px 10px gainsboro; }
+
+img {
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px 10px gainsboro; }
