--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 30px; }
+  @media screen and (max-width: 600px) {
+    .img {
+      grid-template-columns: repeat(1, 1fr); } }
 
 .input__inp {
   width: 200px;
