--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,12 @@
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-gap: 30px;
+  @media screen  and (max-width:600px){
+    grid-template-columns: repeat(1,1fr);
+    
+  }
 }
+
 .input{
   &__inp {
     width: 200px;
